# nautilus_test

./: .gitignore  Cargo.toml  Containerfile  Makefile  README.md  UsingNautilus.md  configure_enclave.sh  deny.toml  expose_enclave.sh  python  register_enclave.sh  socat  update_weather.sh
.github/workflows/: rust.yml
move/app/: Move.toml
move/app/sources/: weather.move
move/enclave/: Move.toml
move/enclave/sources/: enclave.move
src/aws/: Cargo.toml
src/aws/src/: lib.rs
src/init/: Cargo.toml  init.rs
src/nautilus-server/: Cargo.toml  run.sh
src/nautilus-server/src/: app.rs  common.rs  lib.rs  main.rs
src/system/: Cargo.toml
src/system/src/: lib.rs
